# micro_core

./: .gitignore  CMakeLists.txt  README.md  micro_core.sln
cmake/: compiler_option.cmake  find_external_lib.cmake
lib/libuv-v1.x/: libuv-one thread.lib  libuv.lib
make/: build.sh
micro_core/: micro_core.vcxproj  micro_core.vcxproj.filters
micro_core/x64/Debug/micro_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.22664.read.1.tlog  Lib-link.22664.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  micro_core.lastbuildstate  micro_core.write.1u.tlog
micro_core/x64/Release/micro_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  micro_core.lastbuildstate
src/: CMakeLists.txt  main.cpp
src/3rd/http_parser/: http_parser.cpp
src/3rd/libuv-v1.x/: uv.h
src/bus/: func_traits.hpp  message_bus.hpp
src/common/: any_map.hpp  common.cpp  common.hpp  core_macro.h  error.hpp
src/io/: base_context.hpp  bootstrap.hpp  byte_buf.hpp  channel.hpp  channel_handler_context.hpp  channel_id_allocator.cpp  channel_id_allocator.h  channel_initializer.hpp  context_chain.hpp  head_context.hpp  http_client.hpp  http_macro.cpp  http_macro.hpp  http_server.hpp  io_context.hpp  io_handler.hpp  io_handler_initializer.hpp  io_macro.hpp  io_streambuf.hpp  mask.hpp  socket_address.hpp  tcp_acceptor.hpp  tcp_channel.hpp  tcp_connector.hpp  udp_channel.cpp  udp_channel.hpp
src/logger/: logger.cpp  logger.hpp
src/message/: message.hpp
src/module/: base_module.hpp  module.hpp  module_func.cpp  module_func.h  multi_priority_queue.hpp  multi_thread_module.cpp  multi_thread_module.hpp  session.hpp
src/test/: main.cpp  test_bus.cpp  test_bus.h  test_io.cpp  test_io.h  test_timer.cpp  test_timer.h
src/thread/: lock.hpp  nio_thread_pool.hpp  svc_thread.cpp  svc_thread.hpp  uv_thread_pool.cpp  uv_thread_pool.hpp
src/timer/: base_timer.hpp  timer.hpp  timer_common.hpp  timer_func.cpp  timer_func.h  timer_functor.hpp  timer_generator.hpp  timer_message.hpp
test/: main.cpp  test_http.cpp  test_http.h  test_io.cpp  test_io.h  test_timer.cpp  test_udp.cpp  test_udp.h
x64/Debug/: micro_core.exp  micro_core.lib
